@@ -1,3 +1,7 @@
+2011-05-10  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el: Use tabbar-buffer-groups to group tabbar.
+
 2011-05-05  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (grep-current-dir): Fix a bug.
